[package]
name = "text-model"
version = "0.1.0"
authors = ["Vahe Araqelyan <vahe.araqelyan.2013@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
glfw = "0.41.0"
num-traits = "0.2.11"
freetype-rs = "0.26.0"
